fixed style on mobile.

--- a/yxh/style.css
+++ b/yxh/style.css
@@ -9,11 +9,12 @@ html, body
 {
     max-width: 800px;
     margin: auto;
+    padding: 20px;
 }
 
 img
 {
-    max-width: 800px;
+    max-width: 100%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -33,14 +34,16 @@ h2
     border-left: 5px solid rgb(245, 213, 66);
     border-bottom: 1px solid gray;
     padding: 5px;
-    margin: 50px 100px;
+    margin: 50px 20%;
     color: gray;
 }
 
 .meta
 {
     display: flex;
+    flex-wrap: wrap;
     column-gap: 15px;
+    row-gap: 5px;
     color: rgba(0, 0, 0, 0.3);
     padding-bottom: 20px;
 }
